test_suite/tests/ui/string/validate/unknown.stderr
error: Unknown validator `unique`.
       Possible values are `char_len_min`, `char_len_max`, `not_empty`, `predicate`, `regex`.
 --> tests/ui/string/validate/unknown.rs:3:19
  |
3 | #[nutype(validate(unique))]
  |                   ^^^^^^
